objects/CN_MG_Customer_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CS相关配置</description>
    <fields>
        <fullName>CN_CR_ShipTo_Owner__c</fullName>
        <label>CN_CR_ShipTo_Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Auto_Account_Id__c</fullName>
        <label>Contact Auto Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Auto_Owner_Id__c</fullName>
        <label>Contact Auto Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_MDM_Id__c</fullName>
        <defaultValue>&apos;0051y00000NiALcAAN&apos;</defaultValue>
        <label>CN Sales MDM Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CN MG Customer  Settings</label>
</CustomObject>